Update runner config file

--- a/run.conf
+++ b/run.conf
@@ -10,17 +10,18 @@
 #               The %workspace will be mounted to '/workspace' with 'rw'
 #   %task: the task the run script is going to start, defaults to 'bash'
 #          A task can be: bash, shell, sh, 
-#                         jupyter, notebook, lab, jupyterlab, password
-#                         tensorboard
+#                         jupyter, notebook, lab, jupyterlab,
+#                         set_jupyter_password, set_notebook_password,
+#                         set_lab_password, tensorboard
 #   %jupyter_port: port for jupyter notebook, defaults to 8888
 #   %tb_port: port for tensorboard, defaults to 6006
 #   %tb_logdir: path to tensorboard logdir on HOST, defaults to $HOME
 #               The %tb_logdir will be mounted to '/tb_logdir' with 'ro'
 ################################################################################
 
-default_image=c7huang/devel:cugl10.2-py3.8-torch1.8-mmdet3d0.18.1
-# default_image=
-default_workspace=$HOME/Workspace
+# default_image=c7huang/devel:cugl10.2-py3.8-torch1.8
+default_image=
+default_workspace=$HOME
 default_task=bash
 default_jupyter_port=8888
 default_tb_port=6006
@@ -35,26 +36,20 @@ default_tb_logdir=
 # Specify any DOCKER RUN arguments in the $my_docker_run_args.
 # Do not forget the back slash '\' at the end of every multi-line.
 # For example:
-# my_docker_run_args="                            \
-#     -v $DATASET_ROOT:/data:ro                   \   # mount datasets
-#     --shm-size=8gb                              \   # shared memory size
-#     --gpus=all                                  \   # attach GPUs
-#     --cpuset-cpus=0-7                           \   # specify CPUs
-#     --rm                                        \   # remove after termination
+# my_docker_run_args="
+#     -v $DATASET_ROOT:/data:ro     # mount datasets
+#     --shm-size=8gb                # shared memory size
+#     --gpus=all                    # attach GPUs
+#     --cpuset-cpus=0-7             # specify CPUs
+#     --rm                          # remove after termination
+#     --name=my_docker_name         # specify a docker name
 # "
 #
 # !! You will NOT likely need to change other configs in this section !!
 ################################################################################
 
 # !! CHANGE ME !!
-my_docker_run_args="
-    -v $HOME/Workspace/datasets:/data:ro
-    --shm-size=8gb
-    --gpus=all
-    --cpuset-cpus=0-7
-    --rm
-    --name=test
-"
+my_docker_run_args=
 
 
 # Default arguments for 'docker run' commands.
