Add default container option in config

--- a/run.conf
+++ b/run.conf
@@ -19,8 +19,14 @@
 #               The %tb_logdir will be mounted to '/tb_logdir' with 'ro'
 ################################################################################
 
+# Example: run command from 'my_container' if it exists, 
+#          otherwise start a new container with name 'my_container'
+# 
 # default_image=c7huang/devel:cugl10.2-py3.8-torch1.8
+# default_container=my_container
+
 default_image=
+default_container=
 default_workspace=$HOME
 default_task=bash
 default_jupyter_port=8888
@@ -32,23 +38,20 @@ default_tb_logdir=
 # DOCKER RUN arguments
 # This section exists so you don't have to type a long DOCKER RUN command
 # (and possibly forget some arguments) every time you start a container.
-#
-# Specify any DOCKER RUN arguments in the $my_docker_run_args.
-# Do not forget the back slash '\' at the end of every multi-line.
-# For example:
-# my_docker_run_args="
-#     -v $DATASET_ROOT:/data:ro     # mount datasets
-#     --shm-size=8gb                # shared memory size
-#     --gpus=all                    # attach GPUs
-#     --cpuset-cpus=0-7             # specify CPUs
-#     --rm                          # remove after termination
-#     --name=my_docker_name         # specify a docker name
-# "
-#
-# !! You will NOT likely need to change other configs in this section !!
 ################################################################################
 
 # !! CHANGE ME !!
+# Specify any DOCKER RUN arguments in the $my_docker_run_args.
+# For example:
+#
+# DATASET_ROOT=/path/to/dataset
+# my_docker_run_args="
+#     -v $DATASET_ROOT:$DATASET_ROOT:ro
+#     --gpus=device=0
+#     --cpuset-cpus=0-7
+#     --shm-size=8gb
+#     --name=$default_container
+# "
 my_docker_run_args=
 
 
