Mount workspace & tb_logdir to the same path

--- a/run.conf
+++ b/run.conf
@@ -70,9 +70,9 @@ default_docker_run_args="
     -v $HOME/.Xauthority:$HOME/.Xauthority
     -v $HOME/.Xauthority:/root/.Xauthority
     -v /tmp/.X11-unix:/tmp/.X11-unix
-    -v %workspace:/workspace:rw
-    -v %tb_logdir:/tb_logdir:ro
-    -w /workspace
+    -v %workspace:%workspace:rw
+    -v %tb_logdir:%tb_logdir:ro
+    -w %workspace
     -e DISPLAY=:0.0
     --net=host
 "
@@ -117,12 +117,12 @@ default_jupyter_args="
     --ip=0.0.0.0
     --port=%jupyter_port
     --no-browser
-    /workspace
+    %workspace
 "
 
 # You can specify additional default tensorboard arguments here
 default_tb_args="
     --bind_all
     --port=%tb_port
-    --logdir=/tb_logdir
+    --logdir=%tb_logdir
 "
