Get DISPLAY env variable properly

--- a/run.conf
+++ b/run.conf
@@ -73,7 +73,7 @@ default_docker_run_args="
     -v %workspace:%workspace:rw
     -v %tb_logdir:%tb_logdir:ro
     -w %workspace
-    -e DISPLAY=:0.0
+    -e DISPLAY=$DISPLAY
     --net=host
 "
 
