Support setting $HOME as workspace.

--- a/template.conf
+++ b/template.conf
@@ -7,7 +7,7 @@
 #   %image: the docker image to start a new container
 #   %container: the docker container to run commands from
 #   %workspace: workspace on HOST, defaults to $HOME
-#               The %workspace will be mounted to '/workspace' with 'rw'
+#               The %workspace will be mounted to the same path with 'rw'
 #   %task: the task the run script is going to start, defaults to 'bash'
 #          A task can be: bash, shell, sh, 
 #                         jupyter, notebook, lab, jupyterlab,
@@ -15,8 +15,7 @@
 #                         set_lab_password, tensorboard
 #   %jupyter_port: port for jupyter notebook, defaults to 8888
 #   %tb_port: port for tensorboard, defaults to 6006
-#   %tb_logdir: path to tensorboard logdir on HOST, defaults to $HOME
-#               The %tb_logdir will be mounted to '/tb_logdir' with 'ro'
+#   %tb_logdir: path to tensorboard logdir in container
 ################################################################################
 
 # Example: run command from 'my_container' if it exists, 
@@ -27,7 +26,7 @@
 
 default_image=
 default_container=
-default_workspace=$HOME
+default_workspace=
 default_task=bash
 default_jupyter_port=8888
 default_tb_port=6006
@@ -42,17 +41,19 @@ default_tb_logdir=
 
 # !! CHANGE ME !!
 # Specify any DOCKER RUN arguments in the $my_docker_run_args.
-# For example:
+# For example: mounting folders, setting CPU/GPU/memory parameters, etc.
 #
 # DATASET_ROOT=/path/to/dataset
 # my_docker_run_args="
 #     -v $DATASET_ROOT:$DATASET_ROOT:ro
-#     --gpus=device=0
+#     --gpus=\"device=0,1,2,3\"
 #     --cpuset-cpus=0-7
 #     --shm-size=8gb
-#     --name=$default_container
 # "
-my_docker_run_args=
+my_docker_run_args="
+    -v $HOME:/host_home:rw
+    --name=${USER}_$default_container
+"
 
 
 # Default arguments for 'docker run' commands.
@@ -60,18 +61,18 @@ my_docker_run_args=
 # Any additional arguments specified for 'run.sh' will be appended to this list
 # and subsequently passed to 'docker run' comamnd. Note that the existing 
 # arguments defined here will not be replaced.
-TMP_HOME=/tmp/run.sh/$RANDOM
+TMP_HOME=/tmp/run.sh/${USER}_${RANDOM}
 mkdir -p $TMP_HOME
+touch $HOME/.Xauthority
 default_docker_run_args="
     -u $(id -u $USER):$(id -g $USER)
     -v /etc/passwd:/etc/passwd:ro
     -v /etc/group:/etc/group:ro
-    -v $TMP_HOME:$HOME
+    -v /tmp/.X11-unix:/tmp/.X11-unix
+    -v $TMP_HOME:$HOME:rw
     -v $HOME/.Xauthority:$HOME/.Xauthority
     -v $HOME/.Xauthority:/root/.Xauthority
-    -v /tmp/.X11-unix:/tmp/.X11-unix
     -v %workspace:%workspace:rw
-    -v %tb_logdir:%tb_logdir:ro
     -w %workspace
     -e DISPLAY=$DISPLAY
     --net=host
@@ -105,7 +106,9 @@ default_docker_run_args="$default_docker_run_args $my_docker_run_args"
 # !! You will NOT likely need to change anything in this section !!
 ################################################################################
 
-default_docker_exec_args=
+default_docker_exec_args="
+    -e DISPLAY=$DISPLAY
+"
 
 
 ################################################################################
