Update default container name in config template.

--- a/template.conf
+++ b/template.conf
@@ -52,7 +52,7 @@ default_tb_logdir=
 # "
 my_docker_run_args="
     -v $HOME:/host_home:rw
-    --name=${USER}_$default_container
+    --name=$default_container
 "
 
 
