Fix a bug related to variable injection.

--- a/template.conf
+++ b/template.conf
@@ -74,7 +74,7 @@ default_docker_run_args="
     -v $HOME/.Xauthority:/root/.Xauthority
     -v %workspace:%workspace:rw
     -w %workspace
-    -e DISPLAY=$DISPLAY
+    -e DISPLAY
     --net=host
 "
 
@@ -107,7 +107,7 @@ default_docker_run_args="$default_docker_run_args $my_docker_run_args"
 ################################################################################
 
 default_docker_exec_args="
-    -e DISPLAY=$DISPLAY
+    -e DISPLAY
 "
 
 
