Update mmdet3d configs and fix nvidia key rotation

--- a/template.conf
+++ b/template.conf
@@ -61,7 +61,7 @@ my_docker_run_args="
 # Any additional arguments specified for 'run.sh' will be appended to this list
 # and subsequently passed to 'docker run' comamnd. Note that the existing 
 # arguments defined here will not be replaced.
-TMP_HOME=/tmp/run.sh/${USER}_${RANDOM}
+TMP_HOME=$HOME/.local/share/docker_home/${RANDOM}
 mkdir -p $TMP_HOME
 touch $HOME/.Xauthority
 default_docker_run_args="
