--- a/tags/cugl10.2-py3.8-torch1.8-mmdet3d1.0.0rc1-dev.ini
+++ b/tags/cugl10.2-py3.8-torch1.8-mmdet3d1.0.0rc1-dev.ini
@@ -4,7 +4,7 @@ dockerfile = cuda-python-torch-mmdet3d-dev.dockerfile
 options =
 
 [build_args]
-mmcv_version = 1.3.17
-mmseg_version = 0.20.2
-mmdet_version = 2.19.1
-mmdet3d_version = 0.18.1
+mmcv_version = 1.5.1
+mmseg_version = 0.24.1
+mmdet_version = 2.24.1
+mmdet3d_version = 1.0.0rc1
