Update configs for mmdet3d

--- a/tags/cu11.3-py3.9.ini
+++ b/tags/cu11.3-py3.9.ini
@@ -1,8 +1,8 @@
 [config]
-base = cu10.2
+base = cu11.3
 dockerfile = cuda-python.dockerfile
 options =
 
 [build_args]
-python_version = 3.8
-conda_version = 4.11.0
+python_version = 3.9
+conda_version = latest
